--- a/Lesson_06/CMakeLists.txt
+++ b/Lesson_06/CMakeLists.txt
@@ -5,4 +5,8 @@ project(guess_the_number LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(guess_the_number guess_the_number.cpp)
+add_executable(
+        guess_the_number
+        guess_the_number.cpp
+        helpers.cpp
+        helpers.h)
