Add CMean class

--- a/Month_02/Lesson_10/CMakeLists.txt
+++ b/Month_02/Lesson_10/CMakeLists.txt
@@ -7,5 +7,7 @@ add_executable(statistics
         src/IStatistics.h
         src/CMax.h
         src/CMax.cpp
+        src/CMean.h
+        src/CMean.cpp
         src/CMin.h
         src/CMin.cpp)
