Implement Mul class

--- a/Month_01/Lesson_09/CMakeLists.txt
+++ b/Month_01/Lesson_09/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(calc
         src/astnode.cpp
         src/number.cpp
         src/variable.cpp
+        src/mul.cpp
         src/main.cpp
 )
 
