Implement Div class

--- a/Month_01/Lesson_09/CMakeLists.txt
+++ b/Month_01/Lesson_09/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(calc
         src/number.cpp
         src/variable.cpp
         src/mul.cpp
+        src/div.cpp
         src/main.cpp
 )
 
