Add IContainer interface class

--- a/Month_02/Lesson_12/CMakeLists.txt
+++ b/Month_02/Lesson_12/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.5)
 project(Containers)
 
 add_executable(containers
-        src/main.cpp)
+        src/main.cpp
+        src/IContainer.h)
