Move implementation of Sequence container to header file

--- a/Month_02/Lesson_12/CMakeLists.txt
+++ b/Month_02/Lesson_12/CMakeLists.txt
@@ -5,4 +5,4 @@ project(Containers)
 add_executable(containers
         src/Main.cpp
         src/List.h
-        src/Sequence.cpp)
+        src/Sequence.h)
